# ERAAVS

./: README.md  app.py  installation_guide.md  pyproject.toml
attached_assets/: Pasted-C-Users-jason-Desktop-ERAAVS-eraavs-env-Scripts-activate-eraavs-env-C-Users-jason-Desktop-ERA-1746403554618.txt  Pasted-LookupError-Resource-93mpu-1746307123541.txt  Pasted-LookupError-Resource-93mpu-1746307239686.txt
utils/: ai_integration.py  nlp_processor.py  pdf_processor.py  report_generator.py
