[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.50.0",
    "gradio>=5.29.0",
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "numpy>=2.2.5",
    "openai>=1.77.0",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.6",
    "pypdf2>=3.0.1",
    "reportlab>=4.4.0",
    "scikit-learn>=1.6.1",
    "spacy>=3.8.5",
    "streamlit>=1.45.0",
]
